[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel>=0.37.1"]

[project]
name = "denstream"
version = "0.1.1"
description = "Implementation of the DenStream algorithm"
readme = "README.md"
requires-python = ">=3.8, <3.13"
authors = [
    {name = "MrParosk"}
]

dependencies = [
    "numba>=0.56.2",
    "numpy>=1.23,<3.0",
    "scikit-learn>=1.0",
]

[project.optional-dependencies]
dev = [
    "black==24.4.2",
    "isort==5.13.2",
    "mypy==1.10.0",
    "pre-commit==3.7.1",
    "pytest==8.2.2",
    "pytest-cov==5.0.0",
    "ruff==0.4.9",
    "build==1.2.1",
    "twine==5.1.1",
]

[tool.mypy]
ignore_missing_imports = true
exclude = "build"

[tool.black]
line-length = 128

[tool.isort]
line_length = 128
profile = "black"

[tool.ruff]
line-length = 128
