[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel>=0.37.1"]

[project]
name = "denstream"
version = "0.1.1"
description = "Implementation of the DenStream algorithm"
readme = "README.md"
requires-python = ">=3.9, <3.13"
authors = [
    {name = "MrParosk"}
]

dependencies = [
    "numba>=0.56.2",
    "numpy>=1.23,<3.0",
    "scikit-learn>=1.0",
]

[project.optional-dependencies]
dev = [
    "black==24.10.0",
    "isort==5.13.2",
    "mypy==1.13.0",
    "pre-commit==4.0.1",
    "pytest==8.3.3",
    "pytest-cov==6.0.0",
    "ruff==0.7.3",
    "build==1.2.2",
    "twine==5.1.1",
]

[tool.mypy]
ignore_missing_imports = true
strict = true
exclude = [
    "build",
    "tests"
]

[tool.black]
line-length = 128

[tool.isort]
line_length = 128
profile = "black"

[tool.ruff]
line-length = 128
