[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "denstream"
version = "0.1.4"
description = "Implementation of the DenStream algorithm"
readme = "README.md"
requires-python = ">=3.9, <3.14"
authors = [
    {name = "MrParosk"}
]

dependencies = [
    "numba>=0.56",
    "numpy>=2.0",
    "scikit-learn>=1.0",
    "typing-extensions>=4.14.0",
]


[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.2.0",
    "ruff>=0.12.0",
]

[tool.mypy]
ignore_missing_imports = true
strict = true
exclude = [
    "build",
    "tests"
]

[tool.ruff]
line-length = 128
